<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.SuccessFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suit_semibold"
            android:text="러쉬 마스크팩"
            android:textSize="20sp"
            android:textColor="@color/black_400"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="@dimen/size_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name" >

        <ImageView
            android:id="@+id/authentication_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/iv_sample_image"
            android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_authentication_certification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/suit_regular"
            android:text="@string/tv_authentication_certification"
            android:textSize="16sp"
            android:textColor="@color/black_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.239"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/authentication_certification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/suit_regular"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/black_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/tv_authentication_certification"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/tv_authentication_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/suit_regular"
            android:text="@string/tv_authentication_context"
            android:textSize="16sp"
            android:textColor="@color/black_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.239"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_authentication_certification" />

        <TextView
            android:id="@+id/authentication__context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/suit_regular"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/black_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/tv_authentication_context"
            app:layout_constraintTop_toBottomOf="@+id/tv_authentication_certification" />

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_button_green"
            android:layout_marginTop="30dp"
            android:text="@string/tv_go_authentication"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/suit_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_authentication_context" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>